# TaskProxyApp

./: .markdownlint.json  .taurignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
.taskproxy/: 8c7f9044-5cfc-4c73-b0a3-25ffcc1cc920.json  8c7f9044-5cfc-4c73-b0a3-25ffcc1cc920.md  Navigation.json
.taskproxy/pages/: 8c7f9044-5cfc-4c73-b0a3-25ffcc1cc920.md
Docs/: LICENSE  README.md
PowerShell/: BuildSetup.ps1  IncrementVersion.ps1  SharedMethods.ps1
TaskProxyData/: 8c7f9044-5cfc-4c73-b0a3-25ffcc1cc920  Navigation.sdtp
assets/md/: welcome.md
css/: app.css  app.min.css  webui.css
d/en-US/: about.md  docs.md  first_run.md  git-controller.md  home.md  home_new_project.md  home_projects.md  home_settings.md  nav-manager.md  privacy.md  root.md  terms.md
js/: webui.js  webui_interop.js
markdown/: Cargo.toml
markdown-parser/: Cargo.toml
markdown-parser/src/: data_types.rs  lib.rs
markdown-parser/src/data_types/: tokens.rs
markdown/src/: data_types.rs  lib.rs  prelude.rs
markdown/src/data_types/: errors.rs
r/: app.webmanifest
root_files/: app.js  app.min.js  app.webmanifest  appConfig.json  nav.json  service-worker.js  service-worker.min.js  worker.js  worker.min.js
src/: components.rs  constants.rs  main.rs  nav_menu.rs  pages.rs  prelude.rs  projects.rs  tauri-app.rs
src-tauri/: Cargo.toml  tauri.conf.json  v1-tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appdata.rs  background.rs  common.rs  datatypes.rs  errors.rs  lib.rs  main.rs  prelude.rs  projects.rs  services.rs
src-tauri/src/projects/: manager.rs
src-tauri/src/services/: git_controller.rs  projects.rs
src/components/: new_project.rs
src/layout/: header.rs
src/pages/: about.rs  home.rs  new_project.rs  privacy.rs  terms.rs
src/projects/: project_nav.rs
task-proxy/: Cargo.toml
task-proxy-app/: Cargo.toml
task-proxy-app/src/: main.rs  markdown.rs
task-proxy-app/ui/: appwindow.slint  dynamic_content.slint
task-proxy-core/: Cargo.toml
task-proxy-core/src/: lib.rs
task-proxy-core/src/data_types/: errors.rs
task-proxy/src-tauri/: Cargo.toml  tauri.conf.json
taskproxy/: Cargo.toml
taskproxy-slint/: Cargo.toml  README.md  build.rs
taskproxy-slint/src/: main.rs  markdown.rs  prelude.rs
taskproxy-slint/ui/: appwindow.slint  markdown_content.slint
taskproxy/src/: dev_info.rs  main.rs  prelude.rs  resources.rs  startup.rs  update.rs
taskproxy/src/dev_info/: fps_counter.rs
taskproxy/src/resources/: global.rs
taskproxy/src/startup/: dev_info_startup.rs  window_setup.rs  window_startup.rs
taskproxy/src/update/: dev_info.rs  window.rs  window_update.rs
wc/: add-project.js  add-project.min.js  doc-manager.js  doc-manager.min.js  git-manager.js  git-manager.min.js  home.js  home.min.js  loader.js  loader.min.js  markdown-segment.js  markdown-segment.min.js  nav-manager.js  nav-manager.min.js  nav-preview.js  nav-preview.min.js  nav.js  nav.min.js  page-handler.js  page-handler.min.js  project-dropdown.js  project-dropdown.min.js  project-links.js  project-links.min.js  save-button.js  save-button.min.js  security-key-setter.js  security-key-setter.min.js  template.js  terminals.js  terminals.min.js  var-manager.js  var-manager.min.js
