[package]
name = "taskproxy-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
webui = { git = "https://github.com/StoicDreams/RustWebUI", branch = "main", features = [
    "all",
    "stoic",
] }
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-backend = "0.2.87"
web-sys = "0.3"
js-sys = "0.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = ["src-tauri"]

[profile.release.package.webui]
opt-level=0
