[package]
name = "taskproxy-ui"
version = "0.1.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-backend = "0.2"
web-sys = "0.3"
js-sys = "0.3"

[workspace]
resolver = "3"
members = ["src-tauri"]
