[package]
name = "taskproxy"
version = "0.1.18"
description = "Stoic Dreams Task Proxy"
authors = [
    "Erik Gassler <erik@stoicdreams.com>",
    "Stoic Dreams <support@stoicdreams.com>",
]
license = "MIT"
repository = "https://www.github.com/StoicDreams/TaskProxyApp"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "task_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.4", features = [
    "custom-protocol",
    "devtools",
    "rustls-tls",
    "tray-icon",
    "webview-data-url",
] }
tauri-plugin-opener = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
tauri-plugin-fs = { version = "2.2", features = ["watch"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.2"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
age = "0.11"
secrecy = { version = "0.10", features = ["serde"] }
rand = "0.9"
hex = "0.4"
thiserror = "2.0"
base64 = "0.22"
tauri-plugin-log = "2"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-window-state = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
