[package]
name = "taskproxy"
version = "0.1.0"
authors = ["Erik Gassler <erik@stoicdreams.com>", "Stoic Dreams <support@stoicdreams.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.1.0"
markdown = { git = "https://github.com/wooorm/markdown-rs" }

[build-dependencies]
