[package]
name = "taskproxy"
version = "0.1.0"
authors = ["Erik Gassler <erik@stoicdreams.com>", "Stoic Dreams <support@stoicdreams.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.12" } # Stable
winit = "0.28"
image = "0.24"
#bevy = { git = "https://github.com/bevyengine/bevy" } # Bleeding edge
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.1"
markdown = { git = "https://github.com/wooorm/markdown-rs" }

[build-dependencies]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
